# platonic-rep

./: .gitignore  pyproject.toml  tasks.py
experiments/: README.md  cross_model_r2.ipynb  cross_model_r2_gpu.py  intrinsic_dimensionality.ipynb  intrinsic_dimensionality_gpu.py
scripts/: download_features.py
