[project]
name = "platonic"
version = "0.0.1"
description = "platonic-rep"
authors = [
    { name = "minyoung huh", email = "minhuh@mit.edu" },
]
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1.2",
    "torchvision",
    "torchaudio",
    "tqdm",
    "datasets",
    "scikit-learn",
    "transformers",
    "timm",
    "accelerate",
    "sentencepiece",
    "protobuf",
    "matplotlib",
    "ipykernel>=7.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
